creating ChangeLog
2003-03-27 David Malcolm

	* cong-span-text-editor.c

	Fix for bug #105915
	
2003-03-26 David Malcolm

	* Makefile.am

	Added plugin-tests.c

	* plugin-tests.c

	New file

	* cong-plugin.h, main.c

	Added "tests" plugin

	* xmldata.c, global.h

	Added xmlNewProp_NUMBER function
	
2003-03-25 David Malcolm

	* Makefile.am

	Added plugin-lists.c and plugin-xsl.c

	* plugin-lists.c, plugin-xsl.c

	New files

	* cong-dispspec.h, cong-dummy-element-editor.c, cong-editor-widget-impl.h, cong-plugin.c, cong-plugin.h, cong-section-head-editor.c, dispspec.c, global.h, main.c

	Plugin system now supports pluggable editor elements

	* cong-primary-window.c

	Sidebar is now tabbed, with a "Raw XML" tab to complement the "Overview" tab
	
2003-03-24 David Malcolm

	* cong-section-head-editor.c, global.h, popup.c, xmlview.c

	Cleanups for editor context menu	
	
2003-03-14 David Malcolm
	
	* Makefile.am, cong-document.c, cong-document.h, cong-plugin.c, cong-primary-window.c, cong-test-view.c, global.h, main.c, open.c, xmldata.c, xmledit.c, cong-source-view.c
	Documents are now reference-counted, support for new source view, cong_node methods are now labelled as private
	
	* cong-source-view.c

	New file: "source" view
	
2003-03-05 David Malcolm

	* global.h, tree.c, xmldata.c

	Dubious initial attempt at property dialog for nodes
	
2003-03-04 David Malcolm on behalf of Doug Daniels

	* global.h, popup.c, tree.c, xmldata.c

	Beginning of DTD validation
	
2003-01-27 David Malcolm

	*  cong-document.c, cong-primary-window.c, cong-span-text-editor.c, cursor.c, global.h, popup.c, position.c, select.c, xmledit.c, xmlview.c

	Added USE_CONG_EDITOR_WIDGET define
	
2002-12-19 David Malcolm

	* cong-dummy-element-editor.c, cong-editor-widget-impl.h, cong-editor-widget.c, cong-element-editor.c, cong-section-head-editor.c, cong-span-text-editor.c, cursor.c, global.h, xmledit.c

	Typing support within CongEditorWidget
	
2002-12-12 David Malcolm
